# django_template

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  bun.lockb  package.json  pyproject.toml  tailwind.config.js
app/: .env.example
app/api/: views.py
app/app/: settings.py  urls.py
app/base/templates/base/: base.html
app/home/: views.py
app/home/templates/home/: index.html
