[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "Django template project."
authors = ["IMP Studio"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.2.7"
granian = "^0.7.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
