[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "Django template project."
authors = ["IMP Studio"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.2.7"
granian = "^0.7.1"
django-environ = "^0.11.2"
psycopg-binary = "^3.1.12"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
interrogate = "^1.5.0"
djhtml = "^3.0.6"
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
